// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoicesQuestionSchema choices should be ChoiceSchema objects: numbers 1`] = `
"3 validation issue(s)

  Issue #0: invalid_type at choices.0
  Expected object, received number

  Issue #1: invalid_type at choices.1
  Expected object, received number

  Issue #2: invalid_type at choices.2
  Expected object, received number
"
`;

exports[`ChoicesQuestionSchema choices should be ChoiceSchema objects: strings 1`] = `
"2 validation issue(s)

  Issue #0: invalid_type at choices.0
  Expected object, received string

  Issue #1: invalid_type at choices.1
  Expected object, received string
"
`;

exports[`ChoicesQuestionSchema choices should not be empty 1`] = `
"1 validation issue(s)

  Issue #0: nonempty_array_is_empty at choices
  List must contain at least one item
"
`;

exports[`ChoicesQuestionSchema choices should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at choices
  Required
"
`;

exports[`ChoicesQuestionSchema specialCasesStartId should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at specialCasesStartId
  Invalid input
"
`;

exports[`ChoicesQuestionSchema type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at type
  Invalid input
"
`;

exports[`QuestionSchema empty 1`] = `
"4 validation issue(s)

  Issue #0: invalid_type at id
  Required

  Issue #1: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison

  Issue #2: invalid_type at question
  Required

  Issue #3: invalid_type at next
  Required
"
`;

exports[`QuestionSchema incomplete fields 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at slider
  Required
"
`;

exports[`QuestionSchema invalid type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison
"
`;

exports[`QuestionSchema mismatch type 1`] = `
"2 validation issue(s)

  Issue #0: unrecognized_keys at 
  Unrecognized key(s) in object: 'defaultValueFromQuestionId', 'slider'

  Issue #1: invalid_type at choices
  Required
"
`;

exports[`QuestionSchema missing type 1`] = `
"2 validation issue(s)

  Issue #0: unrecognized_keys at 
  Unrecognized key(s) in object: 'defaultValueFromQuestionId', 'slider'

  Issue #1: invalid_enum_value at type
  Input must be one of these values: Slider, ChoicesWithSingleAnswer, ChoicesWithMultipleAnswers, YesNo, MultipleText, HowLongAgo, Branch, BranchWithRelativeComparison
"
`;

exports[`QuestionSchema next should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at next
  Required
"
`;

exports[`SliderQuestionSchema default value range 0 - 100: <0 1`] = `
"1 validation issue(s)

  Issue #0: too_small at defaultValue
  Value should be greater than or equal to 0
"
`;

exports[`SliderQuestionSchema default value range 0 - 100: >100 1`] = `
"1 validation issue(s)

  Issue #0: too_big at defaultValue
  Value should be less than or equal to 100
"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId cannot be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at defaultValueFromQuestionId
  Invalid input
"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId is question ID: empty id 1`] = `
"2 validation issue(s)

  Issue #0: too_small at defaultValueFromQuestionId
  Should be at least 1 characters

  Issue #1: custom_error at defaultValueFromQuestionId
  Question ID can only include letters, numbers, and \\"_\\".
"
`;

exports[`SliderQuestionSchema defaultValueFromQuestionId is question ID: invalid id 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at defaultValueFromQuestionId
  Question ID can only include letters, numbers, and \\"_\\".
"
`;

exports[`SliderQuestionSchema slider tuple: one item 1`] = `
"1 validation issue(s)

  Issue #0: too_small at slider
  Should have at least 2 items
"
`;

exports[`SliderQuestionSchema slider tuple: three items 1`] = `
"1 validation issue(s)

  Issue #0: too_big at slider
  Should have at most 2 items
"
`;

exports[`SliderQuestionSchema slider tuple: zero item 1`] = `
"1 validation issue(s)

  Issue #0: too_small at slider
  Should have at least 2 items
"
`;

exports[`SliderQuestionSchema type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_literal_value at type
  Input must be \\"Slider\\"
"
`;
